--- a/wiki/How_I_Implemented_Basic_Console.wiki
+++ b/wiki/How_I_Implemented_Basic_Console.wiki
@@ -60,7 +60,7 @@ public class MyConsole extends JFrame {
 
 You will notice here that I have used a method getContentPane() a couple of times. This is because a Swing JFrame has several panes, which you can learn about in [http://java.sun.com/docs/books/tutorial/ Sun's Java Tutorial].
 
-The next thing we need to do is implement the !KeyListener interface:
+The next thing we need to do is implement the !KeyListener interface and add it to the text area:
 
 {{{
 import javax.swing.*;
@@ -79,6 +79,8 @@ public class MyConsole extends JFrame implements KeyListener {
     consoleTextArea.setEditable(false);
     
     getContentPane().add(consoleTextArea, BorderLayout.CENTER);
+    
+    consoleTextArea.addKeyListener(this);
   }
   
   public void keyPressed(KeyEvent ke) { }
@@ -86,3 +88,5 @@ public class MyConsole extends JFrame implements KeyListener {
   public void keyTyped(KeyEvent ke) { }
   ...
 }}}
+
+I use the keyword {{{this}}} because the class implementing the !KeyListener is "this" class ;). For those who don't know this refers to the current context (Class) in Java.
