--- a/wiki/How_I_Implemented_Basic_Console.wiki
+++ b/wiki/How_I_Implemented_Basic_Console.wiki
@@ -100,16 +100,16 @@ The last thing that is needed is to implement the keyPressed method. A knowledge
 {{{
   public void keyPressed(KeyEvent ke) {
     if(ke.getKeyCode() == KeyEvent.VK_ENTER) {
-      append("" + ke.getKeyChar());
+      consoleTextArea.append("" + ke.getKeyChar());
 
       if(getBuffer().length() > 0) {
-        append("" + getBuffer() + "\n");
+        consoleTextArea.append("" + getBuffer() + "\n");
         
         //handleCommand(getBuffer());
 	
         buffer = "";
       }
-      append("> ");
+      consoleTextArea.append("> ");
       
       ke.consume();
     } else {
@@ -133,3 +133,11 @@ There is a lot going on in this method, but building it incrementally seemed ver
 First off, there are three general cases here - two of which fall into an even broader case.
 
 The first case is in between the {{{if() {...}}} statement and the {{{...} else {...}}} statement.
+
+The very first thing I do is in the {{{if(..)}}} function call. Here I check to see if the keycode that was returned in the KeyEvent object was the code for the Enter key. If it isn't, then I go onto the next block, and if it is, then this is what happens:
+
+  # Append the new line to the text area
+  # If the buffer has at least one character in it, I append it on the next line
+  # Then ideally I would handle any recognized commands here - that part is stubbed out for another time
+  # After that I append my prompt text to the text area
+  # And finally I consume the event, because I don't want the key event to be processed by the text area
