Edited wiki page through web user interface.

--- a/wiki/How_I_Implemented_Basic_Console.wiki
+++ b/wiki/How_I_Implemented_Basic_Console.wiki
@@ -143,3 +143,9 @@ The very first thing I do is in the {{{if(..)}}} function call. Here I check to 
   # And finally I consume the event, because I don't want the key event to be processed by the text area
 
 The second block, in between the {{{...} else {...}}} and the ending {{{...} }}} is the most general case, the case when pretty much anything is typed. Keep in mind that this method doesn't care if the key that was typed is printable, it'll append anything that isn't caught in its conditional statements.
+
+  # First I check for Ctrl, Alt, and Meta keys being pressed during the key event (Meta is not common on regular PC keyboards), but I don't filter out Shift, which is also a modifier key like the others. The reason for this is because I want capital letters and symbols that require Shift to be pressed.
+  # Then I check to make sure that the keycode isn't 16, which is Ctrl again (some bug in my code probably) - if it isn't there then I go on
+  # I add the character that was typed to the buffer
+  # Then finally I add the character to the text area
+  # Otherwise (from number 1) I check for Ctrl + D being pressed, and if it is then I close the program. Historically Ctrl + D closes a terminal or console in *nix operating systems
