--- a/wiki/How_I_Implemented_Basic_Console.wiki
+++ b/wiki/How_I_Implemented_Basic_Console.wiki
@@ -149,3 +149,7 @@ The second block, in between the {{{...} else {...}}} and the ending {{{...} }}}
   # I add the character that was typed to the buffer
   # Then finally I add the character to the text area
   # Otherwise (from number 1) I check for Ctrl + D being pressed, and if it is then I close the program. Historically Ctrl + D closes a terminal or console in Unix and Linux operating systems
+
+That's it! Well that's all I'm going over here. I hope this was detailed enough to get someone else started. Please feel free to comment on this, because I know there are other ways to implement a console in Java. Also if you see an error in my code, please let me know...or if I forgot a major step.
+
+(C) December 2007, Nathan Lane
